# statistics_ml

./: CMakeLists.txt
include/algorithms/: convolution.h  find_closest_points.h
include/statistics/: clustering.h  decision_functions.h  information.h  initialise.h  meanshift.h
include/statistics/distributions/: distributions.h  gaussian.h  gmm.h
include/statistics/impl/: distance_metric_impl.hpp
include/statistics/metric/: distance_metric.hpp
launch/: test_stats.launch
src/: clustering.cpp  distributions.cpp  information.cpp  initialise.cpp  meanshift.cpp
src/distributions/: gaussian.cpp  gmm.cpp
src/test/: gmm_test.cpp  test.cpp
